--- a/static/styles.css
+++ b/static/styles.css
@@ -12,6 +12,7 @@ body {
 }
 .navbar .navbar-brand {
   color: white;
+  margin-right: 30px;
   font-size: 2rem;
   text-shadow: 0 13.36px 8.896px #2c482e, 0 -2px 1px rgb(12, 11, 11);
   letter-spacing: 0px;
@@ -19,11 +20,16 @@ body {
 .navbar .navbar-brand:hover {
   color: #cccccc;
 }
-.navbar .nav-link {
-  color: white;
+.navbar .nav-item {
+  color: orange;
+  margin-left: 10px;
 }
-.navbar .nav-link:hover {
-  color: #e6e6e6;
+.navbar .nav-item .nav-link {
+  color: rgb(255, 255, 255);
+  text-shadow: 0 13.36px 8.896px #252625, 0 -2px 1px rgb(4, 4, 4);
+}
+.navbar .nav-item .nav-link:hover {
+  color: #cccccc;
   text-decoration: none;
 }
 .navbar .navbar-toggler {
